fix: fixed modal overflow

--- a/src/app/pages/board/task-overview/task-overview.scss
+++ b/src/app/pages/board/task-overview/task-overview.scss
@@ -70,6 +70,10 @@
 	&--closing {
 		animation: slideOut 0.35s ease-out;
 	}
+	
+	app-add-task {
+		height: 100%;
+	}
 
 	&__close-btn {
 	position: absolute;
@@ -89,6 +93,7 @@
 	transition: color 0.2s;
 	z-index: 10;
 	-webkit-tap-highlight-color: transparent;
+
 
 	@include respond-max($break-md) {
 		top: 20px;
